@@ -1,3 +1,4 @@
+Fluid-flow: Fixed: Reset all crashes the sim if particles are present
 # 0.00.02 (46303) Nov 17, 2010
 # 0.00.01 (46300) Nov 17, 2010
 Fluid-flow: Added clock controls to play area
